modificadas ilustraciones, agregadas como svg y ajuste en backgrounds

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "firebase": "flugel",
-  "public": "C:\\\\Users\\\\David\\\\Dropbox\\\\codigo\\\\screen",
+  "public": "C:\\\\Users\\\\David\\\\Dropbox\\\\codigo\\\\FlugelStorm",
   "ignore": [
     "firebase.json",
     "**/.*",
