--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "firebase": "flugel",
-  "public": "C:\\\\Users\\\\David\\\\Dropbox\\\\codigo\\\\FlugelStorm",
+  "public": "C:\\\\Users\\\\David\\\\Flugel\\\\stormLanding\\\\app\\\\appmin",
   "ignore": [
     "firebase.json",
     "**/.*",
