--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "gulp-uglify": "^1.4.1",
     "imagemin-pngquant": "^4.2.0",
     "streamqueue": "^1.1.1"
+  },
+  "dependencies": {
+    "imagemin-svgo": "^4.1.2"
   }
 }
