fix responsive and text

--- a/app/firebase.json
+++ b/app/firebase.json
@@ -1,6 +1,6 @@
 {
   "firebase": "flugel",
-  "public": "C:\\Users\\David\\Documents\\villanueva\\min\\app",
+  "public": "C:\\\\Users\\\\David\\\\Flugel\\\\stormLanding\\\\app",
   "ignore": [
     "firebase.json",
     "**/.*",
